err/acs-student-attendance.err
Listing '.'...
Listing './bin'...
Compiling './bin/runxlrd.py'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/PyYAML-3.12.egg-info'...
Listing './lib/python3.5/site-packages/acs_student_attendance'...
Compiling './lib/python3.5/site-packages/acs_student_attendance/analysis.py'...
***   File "./lib/python3.5/site-packages/acs_student_attendance/analysis.py", line 264
    print "Directory '%s' already exists and will be deleted before continuing." % self.output_dir
                                                                               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/acs_student_attendance/log_parser.py'...
***   File "./lib/python3.5/site-packages/acs_student_attendance/log_parser.py", line 101
    print 'Unknown line found while parsing:', line[:-1]
                                            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/acs_student_attendance/shell.py'...
***   File "./lib/python3.5/site-packages/acs_student_attendance/shell.py", line 44
    print 'DONE!'
                ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/acs_student_attendance-1.0.2.egg-info'...
Listing './lib/python3.5/site-packages/et_xmlfile'...
Listing './lib/python3.5/site-packages/et_xmlfile/tests'...
Listing './lib/python3.5/site-packages/et_xmlfile-1.0.1.egg-info'...
Listing './lib/python3.5/site-packages/jdcal-1.3.egg-info'...
Listing './lib/python3.5/site-packages/odf'...
Listing './lib/python3.5/site-packages/odfpy-1.3.6.egg-info'...
Listing './lib/python3.5/site-packages/openpyxl'...
Listing './lib/python3.5/site-packages/openpyxl/cell'...
Listing './lib/python3.5/site-packages/openpyxl/chart'...
Listing './lib/python3.5/site-packages/openpyxl/chartsheet'...
Listing './lib/python3.5/site-packages/openpyxl/comments'...
Listing './lib/python3.5/site-packages/openpyxl/compat'...
Listing './lib/python3.5/site-packages/openpyxl/descriptors'...
Listing './lib/python3.5/site-packages/openpyxl/drawing'...
Listing './lib/python3.5/site-packages/openpyxl/formatting'...
Listing './lib/python3.5/site-packages/openpyxl/formula'...
Listing './lib/python3.5/site-packages/openpyxl/packaging'...
Listing './lib/python3.5/site-packages/openpyxl/reader'...
Listing './lib/python3.5/site-packages/openpyxl/styles'...
Listing './lib/python3.5/site-packages/openpyxl/utils'...
Listing './lib/python3.5/site-packages/openpyxl/workbook'...
Listing './lib/python3.5/site-packages/openpyxl/workbook/external_link'...
Listing './lib/python3.5/site-packages/openpyxl/worksheet'...
Listing './lib/python3.5/site-packages/openpyxl/writer'...
Listing './lib/python3.5/site-packages/openpyxl/xml'...
Listing './lib/python3.5/site-packages/openpyxl-2.4.9.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/tablib'...
Listing './lib/python3.5/site-packages/tablib/formats'...
Listing './lib/python3.5/site-packages/tablib/packages'...
Listing './lib/python3.5/site-packages/tablib/packages/dbfpy'...
Compiling './lib/python3.5/site-packages/tablib/packages/dbfpy/dbfnew.py'...
***   File "./lib/python3.5/site-packages/tablib/packages/dbfpy/dbfnew.py", line 163
    print "*** created tst.dbf: ***"
                                   ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/tablib/packages/dbfpy3'...
Listing './lib/python3.5/site-packages/tablib-0.12.1.egg-info'...
Listing './lib/python3.5/site-packages/unicodecsv'...
Listing './lib/python3.5/site-packages/unicodecsv-0.14.1.egg-info'...
Listing './lib/python3.5/site-packages/xlrd'...
Listing './lib/python3.5/site-packages/xlrd/examples'...
Listing './lib/python3.5/site-packages/xlrd-1.1.0.dist-info'...
Listing './lib/python3.5/site-packages/xlwt'...
Listing './lib/python3.5/site-packages/xlwt-1.3.0.dist-info'...
Listing './lib/python3.5/site-packages/yaml'...
Listing './share'...
Listing './share/man'...
Listing './share/man/man1'...
Listing './share/python-wheels'...
